--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -28,7 +28,7 @@
   align-items: center;
   background-color: var(--nav-bg-color);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   transform: translateX(100%);
   transition: all var(--transition-delay) ease-in-out;
 }
