--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -12,9 +12,9 @@
 }
 
 .logo {
+  position: relative;
   color: var(--pry-color);
-  font-size: 1.3rem;
-  z-index: 2;
+  z-index: 3;
 }
 
 /* Nav styles */
@@ -29,12 +29,13 @@
   background-color: var(--nav-bg-color);
   width: 100%;
   min-height: 100vh;
-  transform: translateX(100%);
-  transition: all var(--transition-delay) ease-in-out;
+  transform: translateY(-100%);
+  transition: all calc(var(--transition-delay) * 1.5) ease-in-out;
+  z-index: 2;
 }
 
 .nav.active {
-  transform: translateX(0%);
+  transform: translateY(0%);
 }
 
 .nav.active .nav-link {
@@ -42,24 +43,24 @@
 }
 
 .nav.active .nav-link:first-child {
-  animation-delay: calc(var(--transition-delay) * 1.25);
+  animation-delay: calc(var(--animation-delay) * 1.5);
 }
 
 .nav.active .nav-link:nth-child(2) {
-  animation-delay: calc(var(--transition-delay) * 2.25);
+  animation-delay: calc(var(--animation-delay) * 2.5);
 }
 
 .nav.active .nav-link:nth-child(3) {
-  animation-delay: calc(var(--transition-delay) * 3.25);
+  animation-delay: calc(var(--animation-delay) * 3.5);
 }
 
 .nav.active .nav-link:nth-child(4) {
-  animation-delay: calc(var(--transition-delay) * 4.25);
+  animation-delay: calc(var(--animation-delay) * 4.5);
 }
 
 .nav-link {
   position: relative;
-  font-size: 1.45rem;
+  font-size: 1.8rem;
   padding: 1rem 0;
   opacity: 0;
   transition: all var(--transition-delay) ease-in-out;
@@ -71,7 +72,7 @@
   border: 1px solid var(--pry-color);
   border-radius: 0.5rem;
   color: var(--pry-color);
-  font-size: 1.275rem;
+  font-size: 1.5rem;
   padding: 1.1rem 1.3rem;
 }
 
@@ -88,7 +89,7 @@
 @keyframes navLink {
   0% {
     opacity: 0;
-    transform: translateY(10%);
+    transform: translateY(20%);
   }
   100% {
     opacity: 1;
@@ -116,7 +117,7 @@
   height: 0.22rem;
   background-color: var(--pry-color);
   border-radius: 1.5rem;
-  transition: all calc(var(--transition-delay) * 1.7) ease-in-out;
+  transition: all calc(var(--transition-delay) * 1.6) ease-in-out;
   pointer-events: none;
 }
 
