--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
   --text-color: #8892b0;
   --lighter-text-color: #ccd6f6;
   --pry-color: #83eeff;
+  --read-more-btn: #6dc2cf;
   --hero-heading-text: #d0d5e3;
   --section-heading-text: rgba(131, 238, 255, 0.28);
 
