added animation to project details component

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -150,6 +150,8 @@ span.projects {
   width: 90%;
   max-width: 72rem;
   margin: 5.5rem auto 0;
+  min-height: 100vh;
+  background-color: var(--bg-color);
   overflow: hidden;
 }
 
