--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin: 2rem 0 0;
+  margin: 8.5rem 0 0;
 }
 
 .hero-heading {
@@ -12,6 +12,7 @@
   font-size: 2.35rem;
   color: var(--hero-heading-text);
   margin: 0 0 2rem;
+  overflow: hidden;
 }
 
 .hero-heading span {
@@ -95,11 +96,11 @@
   }
 
   .divider-line {
-    width: 45%;
+    width: 40%;
   }
 
   .divider-icon {
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 4rem;
+    height: 4rem;
   }
 }
