--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -27,7 +27,7 @@
 .about-section-grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 2rem;
+  gap: 2.2rem;
   margin: 1.8rem 0 0;
 }
 
@@ -37,19 +37,19 @@
 }
 
 .image-wrapper {
-  width: 15rem;
-  height: 15rem;
-  overflow: hidden;
-  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
   margin: auto;
 }
 
 .about-image {
-  width: 100%;
-  height: 100%;
+  width: 15rem;
+  height: 15rem;
   object-fit: cover;
-  transform: scale(1.5);
-  transform-origin: top;
+  border-radius: 50%;
 }
 
 .skills-group {
@@ -86,9 +86,9 @@
 }
 
 @media screen and (min-width: 31.25rem) {
-  .image-wrapper {
-    width: 19rem;
-    height: 19rem;
+  .about-image {
+    width: 16.5rem;
+    height: 16.5rem;
   }
 
   .skills-group {
@@ -99,14 +99,14 @@
   }
 }
 
-/* Style for screen sizes larger than 790px */
+/* Style for screen sizes larger than 859px */
 @media screen and (min-width: 53.7rem) {
   .about-section-heading {
-    font-size: 6rem;
+    font-size: 5rem;
   }
 
   .about-section-heading.in-view {
-    animation: aboutHeading 8s linear infinite;
+    animation: aboutHeading 7s linear infinite;
   }
 
   @keyframes aboutHeading {
@@ -120,23 +120,33 @@
 
   .about-section-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 2fr, 1fr;
     grid-template-areas:
       "details image"
       "skill skill";
   }
 
   .about-desc:first-child {
-    margin-top: 2rem;
+    margin-top: 0.5rem;
   }
 
   .about-details {
-    padding-left: 3rem;
+    padding-left: 1rem;
     grid-area: details;
   }
 
   .image-wrapper {
     grid-area: image;
+
+    border-radius: 0;
+  }
+
+  .about-image {
+    display: block;
+    width: 17rem;
+    height: 17rem;
+    transform: scale(1);
+    border-radius: 50%;
   }
 
   .skills-group {
