--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,10 +1,16 @@
+.main {
+  height: 90vh;
+  width: 100%;
+  margin-top: 13vh;
+}
+
 .main-container {
-  min-height: 75vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin: 8.5rem 0 0;
+  padding: 1rem 0 0;
 }
 
 .hero-heading {
@@ -64,10 +70,6 @@
 
 /* Style for screen sizes larger than 859px */
 @media screen and (min-width: 53.7rem) {
-  .main-container {
-    min-height: 85vh;
-  }
-
   .hero-heading {
     font-size: 3.3rem;
   }
